<resources>
    <string name="app_name">easyEvent</string>
    <string name="welcome_to_easyevent">Welcome to\nEasyEvent!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="please_login">Please login</string>
    <string name="login">Login</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">easyEvent</string>
    <string name="facebook_login_protocol_scheme" translatable="false">easyEvent</string>
    <string name="logout">Logout</string>
    <string name="please_fill_in_your_personal_data">Please fill in your personal data to complete the registration.</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="surname">Surname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="upload_profile_picture_here">Upload profile picture</string>
    <string name="gender">Gender</string>
    <string name="email">email</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="save_preferences">Save preferences</string>
    <string name="reset_psw">Please enter a valid email address.\n We\'ll provide you a link to reset your password.</string>
    <string name="my_events">My events</string>
    <string name="reservation_success">A reservation to this event was successfully sent! \n You will receive a confirmation email shortly.</string>
    <string name="event_about">About this event</string>
    <string name="text_view_on_map">View on map</string>
    <string name="text_reserve_event">reserve event</string>

</resources>